--- a/package.json
+++ b/package.json
@@ -24,9 +24,11 @@
   "dependencies": {
     "@quasar/extras": "^1.16.2",
     "@rollup/plugin-alias": "^5.0.0",
+    "@sentry/vue": "^7.91.0",
     "@types/postcss-js": "^4.0.1",
     "pinia": "^2.0.34",
     "quasar": "^2.11.10",
+    "rollup-plugin-postcss": "^4.0.2",
     "ts-node": "^10.9.1",
     "vue": "^3.2.47",
     "vue-i18n": "^9.3.0-beta.17",
@@ -37,7 +39,7 @@
     "@types/node": "^18.15.11",
     "@types/postcss-preset-env": "^8.0.0",
     "@vitejs/plugin-vue": "^4.1.0",
-    "postcss-rtlcss": "^4.0.4",
+    "postcss-rtlcss": "^4.0.9",
     "sass": "^1.32.12",
     "typescript": "^4.9.3",
     "vite": "^4.2.0",
